--- a/CandyStore/welcome/mobile/main.css
+++ b/CandyStore/welcome/mobile/main.css
@@ -17,13 +17,14 @@ body {
     font-family: Avenir;
     font-size: 10pt;
     text-overflow: ellipsis;
+	text-align: center;
     overflow: hidden;
     text-shadow: rgb(255, 255, 255) 0px 1px 0px;
     -webkit-margin-top-collapse: separate;
     margin-top: 0px;
-    width: 156px;
-    margin-left: auto;
-    margin-right: auto;
+    width: auto;
+    margin-left: 0px;
+    margin-right: 0px;
     color: rgb(76, 86, 108);
     -webkit-margin-bottom-collapse: separate;
 }
